[metadata]
version = 0.1.0
author = Cisco MSX
description = A package to exchange an MSX access token for an MSX security context, to support implementation of RBAC and tenancy in RESTful APIs."
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src